# cookiecutter-pypackage

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_slug }}/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
{{ cookiecutter.project_slug }}/docs/source/: conf.py  getting-started.rst  index.rst  {{ cookiecutter.package_name }}.rst
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py  __version__.py
{{ cookiecutter.project_slug }}/tasks/: __init__.py  docs.py  package.py  utils.py
{{ cookiecutter.project_slug }}/tests/: __init__.py
