[metadata]
name = {{ cookiecutter.project_slug }}
package_name = {{ cookiecutter.package_name }}
version = {{ cookiecutter.package_version }}
description = {{ cookiecutter.project_description }}
url = {{ cookiecutter.github_url }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
long_description = file: README.rst
license = {{ cookiecutter.licenses[cookiecutter.package_license].name }}
keywords =
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    {{ cookiecutter.licenses[cookiecutter.package_license].classifier }}
    Intended Audience :: Developers
    Operating System :: Linux
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules

[options.extras_require]
test =
    isort
    flake8
    pytest<=3.9.3 # TODO: requires strict pin, needs to be updated (2018-11-29)
    pytest-flake8
    pytest-sugar
    pytest-xdist
    pytest-cov
    hypothesis
    codacy-coverage
    coverage<=4.5.1 # TODO: requires strict pin, needs to be updated (2018-11-29)
    readme_renderer
    check-manifest
docs =
    sphinx
dev =
    twine
    invoke
    colorama
    parver
    black
    flake8
    towncrier
    vprof
    mypy
    pytype
    pre-commit

[options]
zip_safe = true
python_requires = >=3.6
setup_requires = setuptools>=36.2.2
install_requires =

[bdist_wheel]
universal = 1

[tool:pytest]
plugins = cov flake8 xdist
addopts = -rxsX --flake8 -n 4 --cov
norecursedirs = .git _build dist news tasks docs
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL

[flake8]
max-line-length = 88
ignore = D203,F401,E123,W503,E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity = 13
import-order-style = google
application-import-names = flake8

[isort]
atomic = true
not_skip = __init__.py
line_length = 88
indent = '    '
multi_line_output = 3
length_sort = 1
known_third_party =
known_first_party = {{ cookiecutter.package_name }}
include_trailing_comma = true

[mypy]
python_version = 3.7
ignore_missing_imports = true
follow_imports = skip
mypy_path = stubs

[pytype]
# NOTE: pytype currently doesn't support > 3.6 (2018-11-29)
python_version = 3.6
pythonpath =
    src/{{ cookiecutter.package_name }}
inputs =
    src/{{ cookiecutter.package_name }}
output = stubs
disable =
    pyi-error
exclude =
    **/*_test.py
    **/test_*.py
    tasks/*.py
report_errors = false
